Fix lab2 and lab4

--- a/2/Makefile
+++ b/2/Makefile
@@ -1,13 +1,18 @@
 all: run
 
 .PHONY: run
-run: link
+run: compile
 	@./main
 
 .PHONY: compile
 compile:
 	@yasm -f elf64 -g dwarf2 -l main.lst main.asm
+	@gcc main.o -o main -z noexecstack
 
-.PHONY: link
-link: compile
-	@gcc main.o -o main
+.PHONY: debug
+debug: compile
+	@gdb main
+
+.PHONY: format
+format:
+	@nasmfmt *.asm
